Fix the hamburger fa icon margin right when on mobile.

--- a/assets/scss/_sticky-menu-minimal.scss
+++ b/assets/scss/_sticky-menu-minimal.scss
@@ -60,5 +60,13 @@
 				display: inline;
 			}
 		}
+
+		.fa {
+			margin-right: 0;
+
+			@media (min-width: 544px) {
+				margin-right: ptr(7);
+			}
+		}
 	}
 }
